package structural.decorator;

/**
 * Abstração para um Troll.
 * @author <a href="mailto:jean.zanatta@unoesc.edu.br">Jean Luiz Zanatta</a>
 * @since 21/01/2022
 */
public interface Troll {

	void ataque();

    void fugirDaBatalha();

    int getPoderDeAtaque();

}
